--- a/math154/calculus1_related_rates.html
+++ b/math154/calculus1_related_rates.html
@@ -112,6 +112,13 @@ $(function () {
       <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_rqj5dvjb&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_6rlksfa1" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     </div>
 
+    <h2>Example - lamp post </h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#eex6">Example</button>
+      <div id="eex6" class="collapse">
+        <P> A 6 foot tall person walks away from a 10 foot tall lamppost at a constant rate of 3 feet per second.
+          What is the rate that the tip of the shadow moves away from the pole of the lamppost when the person is 10 feet away from the pole?
+        </div>
+
 
 
 </body>
