--- a/math154/calculus1_linear_approximations_differentials.html
+++ b/math154/calculus1_linear_approximations_differentials.html
@@ -70,6 +70,9 @@ def tangent_line(f = input_box(default=exp(x)), xbegin = slider(-3,3,1/10,-1), x
     </div>
     <P>Let's suppose we want to know the value of \(e^{0.1}\) without a calculator.
       Let's follow the steps above to approximate this value.<br>
+
+      <P><button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex3a">Ans</button>
+        <div id="gex3a" class="collapse">
       <dl type='1'>
       <dt>Find a nice, easily evaluated point of a complicated function near the value we want to approximate.</dt>
         <dd>0.1 is near 0 and \(e^0 =1\) is easily evaluated. \(x_0 = 0\) and \(f(x) = e^x\) here.  </dd>
@@ -82,6 +85,7 @@ def tangent_line(f = input_box(default=exp(x)), xbegin = slider(-3,3,1/10,-1), x
       <dd>\(L(0.1) = 1+ 0.1 = 1.1 \approx e^{0.1} = 1.10517...\). This is a pretty good approximation.</dd>
 
     </dl>
+  </div>
 
 
   </div>
@@ -90,11 +94,14 @@ def tangent_line(f = input_box(default=exp(x)), xbegin = slider(-3,3,1/10,-1), x
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex5">Example</button>
   <div id="gex5" class="collapse">
     <P>Use linearization to approximate \(g(6)\) where \(g(x) = e^{x\sin x}\). Note that \(g(2\pi)\) is easily evaluated.
+
+      <P><button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex5a">Ans</button>
+        <div id="gex5a" class="collapse">
       <dl type='1'>
       <dt>Find a nice, easily evaluated point of a complicated function near the value we want to approximate.</dt>
         <dd>\(2\pi \approx 6.28..\) is near 6 and \(g(2\pi) = e^{2\pi \sin(2\pi)} = e^0 = 1\).  </dd>
 
-      <dt>Find the tangent line of this function at that point, i.e. \(y - f(x_0) = f'(x_0) (x - x_0)\).</dt>
+      <dt>Find the tangent line of this function at that point, i.e. \(y - y_0 = y - f(x_0) = f'(x_0) (x - x_0)\).</dt>
         <dd>(Don't forget product and chain rules!)<br>
           \(g'(x) = e^{x\sin x}(\sin x + x\cos x)\) and <br>\(g'(2\pi) = e^0 (\sin (2\pi) + 2\pi \cos(2\pi)) = 2\pi\)
           so the tangent line is \(y - 1 = 2\pi(x-2\pi)\).</dd>
@@ -104,6 +111,7 @@ def tangent_line(f = input_box(default=exp(x)), xbegin = slider(-3,3,1/10,-1), x
       <dd>\(L(6) = 2\pi(6-2\pi) =  -0.7793...\). This is negative. Does that make sense? Would you trust this approximation? Why or why not? </dd>
 
     </dl>
+  </div>
   </div>
 
 
@@ -127,13 +135,13 @@ are close enough to 0.
 <h2>Differentials  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#eex5">Idea</button>
   <div id="eex5" class="collapse">
-    <P>Note from above that our tangent line near \(x_0,f(x_0)\) is \(y - f(x_0) = f'(x_0) (x - x_0)\).
+    <P>Note from above that our tangent line near \( (x_0,f(x_0))\) is \(y - f(x_0) = f'(x_0) (x - x_0)\).
       Think about the left hand side (LHS) of this equation: it is telling us about the small change we make in \(y\) values
       by moving a small amount in the \(x\) values along the tangent line. The quantity \(x-x_0\) on the RHS is this small amount.
       We can let \(\Delta y\) represent a small change in \(y\) while \(\Delta x\) represents a small change in \(x\).
       Then our tangent line equation begins to look like \(\Delta y = f'(x_0) \Delta x\).
       This makes sense since \(f'(x_0)\) is the slope of the tangent line and rearranging we see \(f'(x_0) = \frac{\Delta y}{\Delta x}\)
-      or a rate of change. As we let \(Delta x\) shrink to 0, we say \(\Delta x \to dx\) and \(\Delta y \to dy\).
+      or a rate of change. As we let \(\Delta x\) shrink infinitely small, we say \(\Delta x \to dx\) and \(\Delta y \to dy\).
       We call \(dx,dy\) differentials and write \(dy = f'(x) dx\).
       These relate small changes in outputs of functions to small changes in inputs.
 
@@ -176,6 +184,14 @@ are close enough to 0.
 
             </div>
 
+            <h2>Differentials - bearing  </h2>
+            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#errbr">Example</button>
+              <div id="errbr" class="collapse">
+                <P> A spherical bearing has a radius 3 cm when it is new.
+                  Use differentials to approximate the volume of metal lost after the bearing wears down to a radius of 2.971 cm.
+
+
+                </div>
 
 
 </body>
