--- a/math154/calculus1_usubstitution.html
+++ b/math154/calculus1_usubstitution.html
@@ -41,7 +41,7 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Idea</button>
   <div id="ex0" class="collapse">
     <P>The idea behind u-substitution is this is the chain rule for derivatives in reverse. Let \(F' = f\).
-      Then \(\displaystyle \frac{d}{dx}( F (u(x))) = \frac{dF}{du}{du}{dx} = F'(u) u'(x) = f(u)u'(x)\).
+      Then \(\displaystyle \frac{d}{dx}( F (u(x))) = \frac{dF}{du}\frac{du}{dx} = F'(u) u'(x) = f(u)u'(x)\).
       This says that \(F(u(x))\) is an antiderivative of \(f(u)u'(x)\).<br><br>
 
     <P>We need to recognize \(f(u(x))\) and \(u'(x)\) in the integrand, i.e. we need to
@@ -53,12 +53,18 @@ $(function () {
 <h2>Example</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example</button>
 <div id="ex1" class="collapse">
-<P>Find \(\displaystyle \int 3x^2 \cos(x^3)dx\).
+<P>Find \(\displaystyle \int (2x + 4)\left(x^2 + 4x\right)^5~dx\).<br><br>
+<P>Find \(\displaystyle \int \frac{4}{(4x -3)^2}~dx\).<br><br>
+<P>Find \(\displaystyle \int 3x^2 \cos(x^3)~dx\).
   <br>
   <details>
     <summary>video</summary>
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_wctfl2bq&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_647vp36e" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </details>
+<br>
+<P>Find \(\displaystyle \int x\left(x^2 + 4x\right)^5~dx\).<br><br>
+<P>Find \(\displaystyle \int \frac{1}{(4x -2)^3}~dx\).<br><br>
+
 </div>
 
 <h2>Example</h2>
@@ -66,8 +72,8 @@ $(function () {
 <div id="ex2" class="collapse">
 <P>Find the interals below using u-substitution, if possible.
   <ol>
-    <li>\(\displaystyle \int x^3 \sqrt{x^4 + \pi}dx\)
-    <li>\(\displaystyle \int x^2 \sqrt{x^4 + \pi}dx\)
+    <li>\(\displaystyle \int x^3 \sqrt{x^4 + \pi}~dx\)
+    <li>\(\displaystyle \int x^2 \sqrt{x^4 + \pi}~dx\)
     </ol>
     <br>
     <details>
@@ -105,8 +111,9 @@ $(function () {
     <P> Find \(\displaystyle \int \sqrt{1 + \sqrt{x}}dx\)
       <br>
       <details>
-        <summary>video</summary>
-      <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_5ftknjeq&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_rxa1v00x" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+        <summary>video - make sure to watch</summary>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_az78re7q&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_zk6gbnpn" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+      <!--<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_5ftknjeq&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_rxa1v00x" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>-->
     </details>
   </div>
 
