--- a/math250/week13.html
+++ b/math250/week13.html
@@ -118,7 +118,7 @@
       </ol>
     </td><td><img src="./phaseplanes_wk13.png" width=500></td></tr></table>
     <li>Find the eigenvalues of \(\vec{x}' = \begin{bmatrix}0 & 1 \\ -3/2 & -1/2\end{bmatrix} \vec{x}\).
-    <li>
+    <li>Classify the (0,0) equilibrium solution to \(\vec{y}' = \begin{bmatrix}2 & -3 \\  3 & -5\end{bmatrix} \vec{y}\).
     </ol>
  </div>
 
