--- a/math154/calculus1_exp_log_integrals.html
+++ b/math154/calculus1_exp_log_integrals.html
@@ -125,14 +125,14 @@ $(function () {
       <ol>
         <li>\(\displaystyle \int \frac{e^{\sqrt{x}}}{\sqrt{x}}~dx\) <br><br>
         <li>\(\displaystyle \int \frac{2x+3}{(x+1)^2}~dx\) <br><br>
-        <li>\(\displaystyle \int \frac{x^2}{x-3}~dx\) 
+        <li>\(\displaystyle \int \frac{x^2}{x-3}~dx\)
       <br>
       <details>
         <summary>video</summary>
       <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_0b97vyth&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_pqgef6mq" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     </details><br><br>
 
-    <li>\(\displaystyle \int \frac{x+3}{x^2 + 5x + 6}~dx\) <br><br>
+    <li>\(\displaystyle \int_{-1}^0 \frac{x+3}{x^2 + 5x + 6}~dx\) <br><br>
     <li>\(\displaystyle \int \frac{10}{6-5x}~dx\) <br><br>
     </ol>
     </div>
