--- a/math250/week14.html
+++ b/math250/week14.html
@@ -153,7 +153,7 @@
     <li> Find a basis for the nullspace of the matrix \(A = \begin{bmatrix}-1 & 1 & 2 & 4\\2 & 0 & 1 & -7\end{bmatrix}\).
     <li> Use Gaussian Elimination to find the inverse of \(A = \begin{bmatrix} 1 & 3 \\ 2 & 7\end{bmatrix}\). Verify your solution by using a known formula for the inverse of a 2x2 matrix.
     <li> Use the method of undetermined coefficients to find a solution to \(y'' - 4y' - 12y = 3e^{5t}\).
-    <li> Let \(A = \begin{bmatrix} 1 & 3 \\ 2 & 7\end{bmatrix}\) and \(\vec{x} = [x_1,x_2]^T\). Find the general solution to \(\vec{x}' = A \vec{x}\).
+    <li> Let \(A = \begin{bmatrix} 1 & -2 \\ 2 & 1\end{bmatrix}\) and \(\vec{x} = \begin{bmatrix} x_1\\x_2 \end{bmatrix}\). Find the general solution to \(\vec{x}' = A \vec{x}\).
     <li> Find a solution to \(x''' - 4x' = 0\).
     <li> How many solutions are there to the system below?
       $$1x - y + 2z = -3$$
