--- a/math154/calculus2_calc1review.html
+++ b/math154/calculus2_calc1review.html
@@ -127,19 +127,19 @@ C = 0.036B^{1.356}.
   <div id="derivatives" class="collapse">
 <p>Find the derivatives for each of the functions below.
 <ol type="1">
-<li>\( \theta(y) = \sqrt{100 + y^2} \)
+<li>\( \theta(y) = \sqrt{100 + y^2} \)<br>
 
-<li>\( f(x) = \tan \left(\frac{10 + d}{x}\right)  \)
+<li>\( f(x) = \tan \left(\frac{10 + d}{x}\right)  \)<br>
 
-<li>\( g(y) = \sin \left(\frac{10}{\sqrt{10^2+y^2}} \right) \)
+<li>\( g(y) = \sin \left(\frac{10}{\sqrt{10^2+y^2}} \right) \)<br>
 
-<li>\( h(z) = ze^{-4z} \)
-<li>\( j(x) = \left( x^2 + 4x^4 \right)^3  \)
-<li>\( k(x) = \cos(y^5)  \)
-<li>\( m(y) = \ln ( x+ y) \)
-<li>\( n(z) = \cos(z) e^{z^2} \left( z + y^2 \right)^2 \)
-<li>\( p(x) = \csc(x) x^3\)
-<li>Find \( \frac{dy}{dx} \) if \( x^2 + y^2 = z^2 \).
+<li>\( h(z) = ze^{-4z} \)<br>
+<li>\( j(x) = \left( x^2 + 4x^4 \right)^3  \)<br>
+<li>\( k(x) = \cos(y^5)  \)<br>
+<li>\( m(y) = \ln ( x+ y) \)<br>
+<li>\( n(z) = \cos(z) e^{z^2} \left( z + y^2 \right)^2 \)<br>
+<li>\( p(x) = \csc(x) x^3\)<br>
+<li>Find \( \frac{dy}{dx} \) if \( x^2 + y^2 = z^2 \).<br>
 </ol>
 </div>
 
@@ -148,14 +148,14 @@ C = 0.036B^{1.356}.
   <div id="integrals" class="collapse">
 <p>Find the integrals for each of the functions below.
 <ol type="1">
-<li>\begin{equation*} \int_1^2 x^4 - 3x^2 dx  \end{equation*}
-<li>\begin{equation*} \int_0^x y^2 + 3y -1 dy  \end{equation*}
-<li>\begin{equation*} \int_{-1}^{1} \sin x dx \end{equation*}
-<li>\begin{equation*} \int_1^4 \frac{1}{\sqrt{x}} dx  \end{equation*}
-<li>\begin{equation*} \int x + x^{-1}  dx \end{equation*}
-<li>\begin{equation*} \int e^{2t} + e^{-2t} dt  \end{equation*}
-<li>\begin{equation*} \int_0^{\pi/4} \cos x + \sin 2x dx  \end{equation*}
-<li>\begin{equation*} \int_0^{\pi/6} \cos 2x + \sin x dx  \end{equation*}
+<li>\begin{equation*} \int_1^2 x^4 - 3x^2 dx  \end{equation*}<br>
+<li>\begin{equation*} \int_0^x y^2 + 3y -1 dy  \end{equation*}<br>
+<li>\begin{equation*} \int_{-1}^{1} \sin x dx \end{equation*}<br>
+<li>\begin{equation*} \int_1^4 \frac{1}{\sqrt{x}} dx  \end{equation*}<br>
+<li>\begin{equation*} \int x + x^{-1}  dx \end{equation*}<br>
+<li>\begin{equation*} \int e^{2t} + e^{-2t} dt  \end{equation*}<br>
+<li>\begin{equation*} \int_0^{\pi/4} \cos x + \sin 2x dx  \end{equation*}<br>
+<li>\begin{equation*} \int_0^{\pi/6} \cos 2x + \sin x dx  \end{equation*}<br>
 </ol>
 </div>
 
@@ -164,14 +164,14 @@ C = 0.036B^{1.356}.
   <div id="trig" class="collapse">
 <p> Evaluate each of the trigonometric expressions below. Be ready for other similar expressions throughout the course.
 <ol type="1">
-<li>\begin{equation*} \sin 0  \end{equation*}
-<li>\begin{equation*} \cos \pi/4  \end{equation*}
-<li>\begin{equation*} \tan \pi/3 \end{equation*}
-<li>\begin{equation*} \sin \pi/2 \end{equation*}
-<li>\begin{equation*} \cos \pi \end{equation*}
-<li>\begin{equation*} \cos 0 \end{equation*}
-<li>\begin{equation*} \tan \pi \end{equation*}
-<li>\begin{equation*} \cos 4\pi/3  \end{equation*}
+<li>\begin{equation*} \sin 0  \end{equation*}<br>
+<li>\begin{equation*} \cos \pi/4  \end{equation*}<br>
+<li>\begin{equation*} \tan \pi/3 \end{equation*}<br>
+<li>\begin{equation*} \sin \pi/2 \end{equation*}<br>
+<li>\begin{equation*} \cos \pi \end{equation*}<br>
+<li>\begin{equation*} \cos 0 \end{equation*}<br>
+<li>\begin{equation*} \tan \pi \end{equation*}<br>
+<li>\begin{equation*} \cos 4\pi/3  \end{equation*}<br>
 </ol>
 </div>
 
