--- a/math154/calc2home.html
+++ b/math154/calc2home.html
@@ -25,12 +25,13 @@ $(function () {
 <h1>Calculus 2 Webpages</h1>
 <ul>
   <li><a href="./calculus2_calc1review.html">calc1 review</a>
+  <li><a href="./calculus2_integral_examples.html">integral examples</a>
   <li><a href="./DEs_calc2.html">DEs_calc2.html</a>
   <li><a href="./dot_cross_product_examples.html">dot_cross_product_examples.html</a>
   <li><a href="./exam3review.html">exam3review.html</a>
   <li><a href="./exam4review.html">exam4review.html</a>
   <li><a href="./exp_log.html">exp_log.html</a>
-  <li><a href="./integral_examples.html">integral_examples.html</a>
+
   <li><a href="./integral_patterns.html">integral_patterns.html</a>
   <li><a href="./newtonsmethod.html">newtonsmethod.html</a>
   <li><a href="./num_integration.html">num_integration.html</a>
